@@ -22,7 +22,8 @@
 # -----------------------------------------------------------------------------
 # Usage:
 
-#     ${ARC_GNU}/toolchain/arc-versions.sh
+#     arc-versions.sh [--auto-checkout | --no-auto-checkout]
+#                     [--auto-pull | --no-auto-pull]
 
 # The environment variable ${ARC_GNU} should point to the directory within
 # which the GIT trees live.
@@ -30,20 +31,45 @@
 # We checkout the desired branch for each tool. Note that these must exist or
 # we fail.
 
+# Default options
+autocheckout="--auto-checkout"
+autopull="--auto-pull"
+
+# Parse options
+until
+opt=$1
+case ${opt} in
+    --auto-checkout | --no-auto-checkout)
+	autocheckout=$1
+	;;
+
+    --auto-pull | --no-auto-pull)
+	autopull=$1
+	;;
+
+    ?*)
+	echo "Usage: arc-versions.sh  [--auto-checkout | --no-auto-checkout]"
+        echo "                        [--auto-pull | --no-auto-pull]"
+	exit 1
+	;;
+
+    *)
+	;;
+esac
+[ "x${opt}" = "x" ]
+do
+    shift
+done
+
 # Specify the versions to use as a string <tool>:<branch>. These are the
-# development versions for the ARC 4.4 tool chain release.
+# development versions for the master tool chain release.
 cgen="cgen:arc_4_4-cgen-1_0-dev"
-binutils="binutils:arc_4_4-binutils-2_19-dev"
-gcc="gcc:arc_4_4-gcc-4_4-dev"
+binutils="binutils:arc_4_8-binutils-mainline-dev"
+gcc="gcc:arc_4_8-gcc-mainline-dev"
 gdb="gdb:arc_4_4-gdb-6_8-dev"
 newlib="newlib:arc_4_4-newlib-1_17-dev"
 uclibc="uClibc:arc_4_4-uClibc-0_9_30-dev"
-
-# If Linux dir was specified by user, don't bother with it's repository
-if [ $1 -eq 0 ]
-then
-	linux="linux:stable-arc-3.2"
-fi
+linux="linux:stable-arc-3.2"
 
 for version in ${cgen} ${binutils} ${gcc} ${gdb} ${newlib} ${uclibc} ${linux}
 do
@@ -51,13 +77,20 @@ do
     branch=`echo ${version} | cut -d ':' -f 2`
 
     cd ${ARC_GNU}/${tool}
-    if git checkout ${branch}
+
+    if [ "x${autocheckout}" = "x--auto-checkout" ]
     then
-	if [ "x$2" = "x--auto-pull" ]
+	if ! git checkout ${branch}
 	then
-	    git pull
+	    exit 1
 	fi
-    else
-	exit 1
+    fi
+
+    if [ "x${autopull}" = "x--auto-pull" ]
+    then
+	if ! git pull
+	then
+	    exit 1
+	fi
     fi
 done
